@@ -1,3 +1,12 @@
+2014-06-23  Corinna Vinschen  <vinschen@redhat.com>
+
+	* libc/argz/envz_merge.c (envz_merge): Fix memory leak (Cygwin Coverity
+	Scan CID 60023).
+	* libc/ctype/iswalpha.c (iswalpha): Add bounds check to avoid
+	out-of-bounds read from utf8 tables (CID 59949).
+	* libc/locale/ldpart.c (__part_load_locale): Add 1 byte to size of lbuf.
+	Write NUL into the last byte to accommodate split_lines (CID 60047).
+
 2014-06-11  Richard Earnshaw  <rearnsha@arm.com>
 
 	* libc/machine/aarch64/strchrnul.S: New file.
